--- a/Lab_6_Assignment.ipynb
+++ b/Lab_6_Assignment.ipynb
@@ -1199,13 +1199,196 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 31,
       "metadata": {
-        "id": "A85dWYEgS6a5"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "A85dWYEgS6a5",
+        "outputId": "89b7b00f-509f-446c-918b-245ea970770d"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<Hour>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 31
+        }
+      ],
       "source": [
-        "# Insert commenting and code in this cell."
+        "# Insert commenting and code in this cell.\n",
+        "# Frequencies and Date Offsets\n",
+        "from pandas.tseries.offsets import Hour, Minute\n",
+        "hour = Hour()\n",
+        "hour"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "four_hours = Hour(4)\n",
+        "four_hours"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9cNTIcAg8f5L",
+        "outputId": "81a307f4-1d3a-4f66-d3e9-177696270761"
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<4 * Hours>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 32
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# range pass freq\n",
+        "pd.date_range(\"2000-01-01\", \"2000-01-03 23:59\", freq=\"4H\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yYY8wIAY8f0Q",
+        "outputId": "6e30817d-cb5e-4cf9-cfcc-e6f22b5907c4"
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/tmp/ipython-input-2714302941.py:2: FutureWarning: 'H' is deprecated and will be removed in a future version, please use 'h' instead.\n",
+            "  pd.date_range(\"2000-01-01\", \"2000-01-03 23:59\", freq=\"4H\")\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "DatetimeIndex(['2000-01-01 00:00:00', '2000-01-01 04:00:00',\n",
+              "               '2000-01-01 08:00:00', '2000-01-01 12:00:00',\n",
+              "               '2000-01-01 16:00:00', '2000-01-01 20:00:00',\n",
+              "               '2000-01-02 00:00:00', '2000-01-02 04:00:00',\n",
+              "               '2000-01-02 08:00:00', '2000-01-02 12:00:00',\n",
+              "               '2000-01-02 16:00:00', '2000-01-02 20:00:00',\n",
+              "               '2000-01-03 00:00:00', '2000-01-03 04:00:00',\n",
+              "               '2000-01-03 08:00:00', '2000-01-03 12:00:00',\n",
+              "               '2000-01-03 16:00:00', '2000-01-03 20:00:00'],\n",
+              "              dtype='datetime64[ns]', freq='4h')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 33
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# combine offsets\n",
+        "Hour(2) + Minute(30)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "p-4TVdD78lTG",
+        "outputId": "942baceb-df9b-4962-f657-cb7b2be80386"
+      },
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<150 * Minutes>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 35
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pd.date_range(\"2000-01-01\", periods=10, freq=\"1h30min\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Q8CscwXz8fHB",
+        "outputId": "ef0ece97-3100-4fd7-d532-5f13cb7b7c26"
+      },
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "DatetimeIndex(['2000-01-01 00:00:00', '2000-01-01 01:30:00',\n",
+              "               '2000-01-01 03:00:00', '2000-01-01 04:30:00',\n",
+              "               '2000-01-01 06:00:00', '2000-01-01 07:30:00',\n",
+              "               '2000-01-01 09:00:00', '2000-01-01 10:30:00',\n",
+              "               '2000-01-01 12:00:00', '2000-01-01 13:30:00'],\n",
+              "              dtype='datetime64[ns]', freq='90min')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 36
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# week of month dates\n",
+        "monthly_dates = pd.date_range(\"2012-01-01\", \"2012-09-01\", freq=\"WOM-3FRI\")\n",
+        "list(monthly_dates)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "F7x90sTe8-Qx",
+        "outputId": "9194ed1b-4e1d-49b1-f319-82789ceafa3f"
+      },
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[Timestamp('2012-01-20 00:00:00'),\n",
+              " Timestamp('2012-02-17 00:00:00'),\n",
+              " Timestamp('2012-03-16 00:00:00'),\n",
+              " Timestamp('2012-04-20 00:00:00'),\n",
+              " Timestamp('2012-05-18 00:00:00'),\n",
+              " Timestamp('2012-06-15 00:00:00'),\n",
+              " Timestamp('2012-07-20 00:00:00'),\n",
+              " Timestamp('2012-08-17 00:00:00')]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 39
+        }
       ]
     },
     {
@@ -1228,13 +1411,168 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 40,
       "metadata": {
-        "id": "a4aX-Jl9S6a5"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "a4aX-Jl9S6a5",
+        "outputId": "78133df4-8e05-4c40-89c6-6463aecac11a"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['US/Eastern', 'US/Hawaii', 'US/Mountain', 'US/Pacific', 'UTC']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 40
+        }
+      ],
       "source": [
-        "# Insert commenting and code in this cell."
+        "# Insert commenting and code in this cell.\n",
+        "# Time Zone Handling get timezones\n",
+        "import pytz\n",
+        "pytz.common_timezones[-5:]"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tz = pytz.timezone(\"America/New_York\")\n",
+        "tz"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kuolvV5s9im0",
+        "outputId": "5cf59d02-fb12-443a-c97c-32b4ec262a13"
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<DstTzInfo 'America/New_York' LMT-1 day, 19:04:00 STD>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 41
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Time Zone Localization and Conversion\n",
+        "dates = pd.date_range(\"2012-03-09 09:30\", periods=6)\n",
+        "ts = pd.Series(np.random.standard_normal(len(dates)), index=dates)\n",
+        "ts"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 272
+        },
+        "id": "jyr2vv3i9ijq",
+        "outputId": "178c76aa-d1fa-411f-fdb4-c5887e655c20"
+      },
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2012-03-09 09:30:00    0.864316\n",
+              "2012-03-10 09:30:00   -0.573113\n",
+              "2012-03-11 09:30:00    0.115655\n",
+              "2012-03-12 09:30:00   -3.030066\n",
+              "2012-03-13 09:30:00    0.265401\n",
+              "2012-03-14 09:30:00    1.258323\n",
+              "Freq: D, dtype: float64"
+            ],
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>0</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>2012-03-09 09:30:00</th>\n",
+              "      <td>0.864316</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2012-03-10 09:30:00</th>\n",
+              "      <td>-0.573113</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2012-03-11 09:30:00</th>\n",
+              "      <td>0.115655</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2012-03-12 09:30:00</th>\n",
+              "      <td>-3.030066</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2012-03-13 09:30:00</th>\n",
+              "      <td>0.265401</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2012-03-14 09:30:00</th>\n",
+              "      <td>1.258323</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div><br><label><b>dtype:</b> float64</label>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 42
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(ts.index.tz)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gkT03kgA9igA",
+        "outputId": "1ffa0371-5a18-413e-f171-a6ee8da6b919"
+      },
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "None\n"
+          ]
+        }
       ]
     },
     {
@@ -1257,13 +1595,143 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 44,
       "metadata": {
-        "id": "nYkKhWMAS6a5"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 397
+        },
+        "id": "nYkKhWMAS6a5",
+        "outputId": "322ec720-c5fc-4a29-d073-77840bd736be"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2012-03-07 09:30:00   -0.409859\n",
+              "2012-03-08 09:30:00   -0.033085\n",
+              "2012-03-09 09:30:00    0.069200\n",
+              "2012-03-12 09:30:00    1.083736\n",
+              "2012-03-13 09:30:00    0.054952\n",
+              "2012-03-14 09:30:00    0.459853\n",
+              "2012-03-15 09:30:00   -1.038175\n",
+              "2012-03-16 09:30:00    0.447275\n",
+              "2012-03-19 09:30:00   -0.170063\n",
+              "2012-03-20 09:30:00    0.114444\n",
+              "Freq: B, dtype: float64"
+            ],
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>0</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>2012-03-07 09:30:00</th>\n",
+              "      <td>-0.409859</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2012-03-08 09:30:00</th>\n",
+              "      <td>-0.033085</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2012-03-09 09:30:00</th>\n",
+              "      <td>0.069200</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2012-03-12 09:30:00</th>\n",
+              "      <td>1.083736</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2012-03-13 09:30:00</th>\n",
+              "      <td>0.054952</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2012-03-14 09:30:00</th>\n",
+              "      <td>0.459853</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2012-03-15 09:30:00</th>\n",
+              "      <td>-1.038175</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2012-03-16 09:30:00</th>\n",
+              "      <td>0.447275</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2012-03-19 09:30:00</th>\n",
+              "      <td>-0.170063</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2012-03-20 09:30:00</th>\n",
+              "      <td>0.114444</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div><br><label><b>dtype:</b> float64</label>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 44
+        }
+      ],
       "source": [
-        "# Insert commenting and code in this cell."
+        "# Insert commenting and code in this cell.\n",
+        "# Operations Between Different Time Zones\n",
+        "dates = pd.date_range(\"2012-03-07 09:30\", periods=10, freq=\"B\")\n",
+        "ts = pd.Series(np.random.standard_normal(len(dates)), index=dates)\n",
+        "ts"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ts1 = ts[:7].tz_localize(\"Europe/London\")\n",
+        "ts2 = ts1[2:].tz_convert(\"Europe/Moscow\")\n",
+        "result = ts1 + ts2\n",
+        "result.index"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JXuoiSjw-c1W",
+        "outputId": "9f99b23c-6d23-4c45-823c-1fb7cee94721"
+      },
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "DatetimeIndex(['2012-03-07 09:30:00+00:00', '2012-03-08 09:30:00+00:00',\n",
+              "               '2012-03-09 09:30:00+00:00', '2012-03-12 09:30:00+00:00',\n",
+              "               '2012-03-13 09:30:00+00:00', '2012-03-14 09:30:00+00:00',\n",
+              "               '2012-03-15 09:30:00+00:00'],\n",
+              "              dtype='datetime64[ns, UTC]', freq=None)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 46
+        }
       ]
     },
     {
