--- a/Lab_6_Assignment.ipynb
+++ b/Lab_6_Assignment.ipynb
@@ -1754,13 +1754,275 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 47,
       "metadata": {
-        "id": "a1EDjIamS6a5"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "a1EDjIamS6a5",
+        "outputId": "9d0ca678-246c-4d43-c7f3-44d727e923ea"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/tmp/ipython-input-4059779374.py:3: FutureWarning: 'A-DEC' is deprecated and will be removed in a future version, please use 'Y-DEC' instead.\n",
+            "  p = pd.Period(\"2011\", freq=\"A-DEC\")\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Period('2011', 'Y-DEC')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 47
+        }
+      ],
       "source": [
-        "# Insert commenting and code in this cell."
+        "# Insert commenting and code in this cell.\n",
+        "# Periods and Period Arithmetic\n",
+        "p = pd.Period(\"2011\", freq=\"A-DEC\")\n",
+        "p"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "p + 5"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dqJcE_XD-7EC",
+        "outputId": "887cd661-452e-49ae-c890-ff4260382708"
+      },
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Period('2016', 'Y-DEC')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 48
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "g1QmMRSF-6_V"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "p - 2"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6PiZTjVU_ANw",
+        "outputId": "580dd0cb-393a-4050-a23d-52c43f647593"
+      },
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Period('2009', 'Y-DEC')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 49
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pd.Period(\"2014\", freq=\"A-DEC\") - p"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "caMbMoAB_AJR",
+        "outputId": "cb2913ce-e1f8-4670-87ff-423d8585b169"
+      },
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/tmp/ipython-input-3816979827.py:1: FutureWarning: 'A-DEC' is deprecated and will be removed in a future version, please use 'Y-DEC' instead.\n",
+            "  pd.Period(\"2014\", freq=\"A-DEC\") - p\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<3 * YearEnds: month=12>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 50
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# regular ranges\n",
+        "periods = pd.period_range(\"2000-01-01\", \"2000-06-30\", freq=\"M\")\n",
+        "periods"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HWz7U1Jg_ISH",
+        "outputId": "769492a3-7818-4f18-ac20-d5b322328d62"
+      },
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "PeriodIndex(['2000-01', '2000-02', '2000-03', '2000-04', '2000-05', '2000-06'], dtype='period[M]')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 51
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# period index\n",
+        "pd.Series(np.random.standard_normal(6), index=periods)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 272
+        },
+        "id": "imXTwcdj_IOq",
+        "outputId": "2a660a2c-ed6d-47c4-a749-ad1f07392bc6"
+      },
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2000-01    0.987508\n",
+              "2000-02   -0.337023\n",
+              "2000-03    0.964956\n",
+              "2000-04    1.112799\n",
+              "2000-05   -0.479657\n",
+              "2000-06   -0.667948\n",
+              "Freq: M, dtype: float64"
+            ],
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>0</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>2000-01</th>\n",
+              "      <td>0.987508</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2000-02</th>\n",
+              "      <td>-0.337023</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2000-03</th>\n",
+              "      <td>0.964956</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2000-04</th>\n",
+              "      <td>1.112799</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2000-05</th>\n",
+              "      <td>-0.479657</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2000-06</th>\n",
+              "      <td>-0.667948</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div><br><label><b>dtype:</b> float64</label>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 52
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "values = [\"2001Q3\", \"2002Q2\", \"2003Q1\"]\n",
+        "index = pd.PeriodIndex(values, freq=\"Q-DEC\")\n",
+        "index"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8fMdmD_f_dPQ",
+        "outputId": "aeaeecc3-c8f0-41e2-ed9e-a506271eafa3"
+      },
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "PeriodIndex(['2001Q3', '2002Q2', '2003Q1'], dtype='period[Q-DEC]')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 53
+        }
       ]
     },
     {
