--- a/Lab_6_Assignment.ipynb
+++ b/Lab_6_Assignment.ipynb
@@ -2045,13 +2045,282 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 54,
       "metadata": {
-        "id": "JwBc5T56S6a5"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 458
+        },
+        "id": "JwBc5T56S6a5",
+        "outputId": "c4f0e9a7-d9c4-4e31-eb93-713bb478fb8c"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2000-01-01    0.458751\n",
+              "2000-01-02    1.971564\n",
+              "2000-01-03    1.288894\n",
+              "2000-01-04   -0.534291\n",
+              "2000-01-05   -0.250551\n",
+              "                ...   \n",
+              "2000-04-05    0.548757\n",
+              "2000-04-06    0.180223\n",
+              "2000-04-07    1.498200\n",
+              "2000-04-08   -2.307133\n",
+              "2000-04-09    0.907313\n",
+              "Freq: D, Length: 100, dtype: float64"
+            ],
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>0</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>2000-01-01</th>\n",
+              "      <td>0.458751</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2000-01-02</th>\n",
+              "      <td>1.971564</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2000-01-03</th>\n",
+              "      <td>1.288894</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2000-01-04</th>\n",
+              "      <td>-0.534291</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2000-01-05</th>\n",
+              "      <td>-0.250551</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2000-04-05</th>\n",
+              "      <td>0.548757</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2000-04-06</th>\n",
+              "      <td>0.180223</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2000-04-07</th>\n",
+              "      <td>1.498200</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2000-04-08</th>\n",
+              "      <td>-2.307133</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2000-04-09</th>\n",
+              "      <td>0.907313</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>100 rows × 1 columns</p>\n",
+              "</div><br><label><b>dtype:</b> float64</label>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 54
+        }
+      ],
       "source": [
-        "# Insert commenting and code in this cell."
+        "# Insert commenting and code in this cell.\n",
+        "# Resampling and Frequency Conversion\n",
+        "dates = pd.date_range(\"2000-01-01\", periods=100)\n",
+        "ts = pd.Series(np.random.standard_normal(len(dates)), index=dates)\n",
+        "ts"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ts.resample(\"M\").mean()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 244
+        },
+        "id": "Ux-l36h-_78Y",
+        "outputId": "53eaef21-0cb3-41de-8168-644d791a0a52"
+      },
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/tmp/ipython-input-3978117481.py:1: FutureWarning: 'M' is deprecated and will be removed in a future version, please use 'ME' instead.\n",
+            "  ts.resample(\"M\").mean()\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2000-01-31    0.175549\n",
+              "2000-02-29    0.238513\n",
+              "2000-03-31   -0.393099\n",
+              "2000-04-30    0.160057\n",
+              "Freq: ME, dtype: float64"
+            ],
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>0</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>2000-01-31</th>\n",
+              "      <td>0.175549</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2000-02-29</th>\n",
+              "      <td>0.238513</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2000-03-31</th>\n",
+              "      <td>-0.393099</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2000-04-30</th>\n",
+              "      <td>0.160057</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div><br><label><b>dtype:</b> float64</label>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 55
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ts.resample(\"M\", kind=\"period\").mean()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 279
+        },
+        "id": "0jO7pVhuACQy",
+        "outputId": "90834e19-645b-4b73-b582-2100ff79d8d6"
+      },
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/tmp/ipython-input-1563622178.py:1: FutureWarning: The 'kind' keyword in Series.resample is deprecated and will be removed in a future version. Explicitly cast the index to the desired type instead\n",
+            "  ts.resample(\"M\", kind=\"period\").mean()\n",
+            "/tmp/ipython-input-1563622178.py:1: FutureWarning: 'M' is deprecated and will be removed in a future version, please use 'ME' instead.\n",
+            "  ts.resample(\"M\", kind=\"period\").mean()\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2000-01    0.175549\n",
+              "2000-02    0.238513\n",
+              "2000-03   -0.393099\n",
+              "2000-04    0.160057\n",
+              "Freq: M, dtype: float64"
+            ],
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>0</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>2000-01</th>\n",
+              "      <td>0.175549</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2000-02</th>\n",
+              "      <td>0.238513</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2000-03</th>\n",
+              "      <td>-0.393099</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2000-04</th>\n",
+              "      <td>0.160057</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div><br><label><b>dtype:</b> float64</label>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 56
+        }
       ]
     }
   ],
